# XFit

./: CrystalInfo.py  CurveFit.py  DataExport.py  DataPreProcess.py  DirFileRead.py  InputCheck.py  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py  xfit.iss
file/: waxd.cake
scripts/: install_windows.bat
xfit/: __init__.py  analysis.py  cli.py  data_io.py  gui.py  models.py  preprocess.py  processor.py  reports.py
